# conan_cmake

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  package.json
.conanprofiles/: win64-conanprofile-debug.ini  win64-conanprofile-release.ini
src/: main.cpp  main.hpp
utils/cmake/internal/: compile_options.internal.cmake  install.internal.cmake  msvc.internal.cmake  source_files.internal.cmake
utils/cmake/move_folders/: public.move_folders.cmake  shader.move_folders.cmake
utils/cmake/shader/: glsl.shader.cmake  slang.shader.cmake
